--- a/index.html
+++ b/index.html
@@ -2,10 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv=”refresh” content= “0; URL=’https://kurly-klaw.github.io/Kurly-Frontend/‘ ”/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css" type="text/css">
-    <link rel="icon" type="image/x-icon" href="/src/crown.png">
+    <meta http-equiv=”refresh” content= “0; URL=’https://www.Kurly-Klaw.github.io/Kurly-Frontend/‘ ”/>
     <title>Madrinhas</title>
 </head>
 <body>
