--- a/index.html
+++ b/index.html
@@ -1,12 +1,48 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv=”refresh” content= “0; URL=’https://www.Kurly-Klaw.github.io/Kurly-Frontend/‘ ”/>
-    <title>Madrinhas</title>
+<title>Mudamos de endereço!</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta http-equiv="refresh" content="5;url=https://kurly-klaw.github.io/Kurly-Frontend/">
+<style type="text/css">
+a
+{
+   color:#2098DF;
+   text-decoration:none;
+}
+body
+{
+   font-family: Verdana, Geneva, sans-serif;
+   color:#666;
+   text-align: center;
+}
+</style>
 </head>
+
 <body>
-  <h1>Página inicial da Kurly Klaw</h1>
-    <p>Redirecionando.</p>
+<p>Nosso portal mudou de endereço!</p>
+<p><a href="https://kurly-klaw.github.io/Kurly-Frontend/">www.google.com.br</a></p>
+<p><span id="redirecionamento" style='border:0; color:#666; text-align: center; font-family: Arial, Helvetica, sans-serif;'></span></p>
+<script>
+var s = 5; contar();
+function contar()
+{
+   if (s == 0)
+   {
+      document.getElementById('redirecionamento').innerHTML = 'Redirecionando agora. Bom proveito!';
+      clearTimeout(contagem);
+   }
+   else if (s == 1)
+   {
+      document.getElementById('redirecionamento').innerHTML = 'Redirecionando em ' + s-- + ' segundo.';
+      contagem = setTimeout(contar, 1000);
+   }
+   else
+   {
+      document.getElementById('redirecionamento').innerHTML = 'Redirecionando em ' + s-- + ' segundos.';
+      contagem = setTimeout(contar, 1000);
+   }
+}
+</script>
 </body>
 </html>
