--- a/index.html
+++ b/index.html
@@ -1,48 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Mudamos de endereço!</title>
+<title>Redirecionando</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta http-equiv="refresh" content="5;url=https://kurly-klaw.github.io/Kurly-Frontend/">
-<style type="text/css">
-a
-{
-   color:#2098DF;
-   text-decoration:none;
-}
-body
-{
-   font-family: Verdana, Geneva, sans-serif;
-   color:#666;
-   text-align: center;
-}
-</style>
+<meta http-equiv="refresh" content="2;url=https://kurly-klaw.github.io/Kurly-Frontend/">
 </head>
-
 <body>
-<p>Nosso portal mudou de endereço!</p>
-<p><a href="https://kurly-klaw.github.io/Kurly-Frontend/">www.google.com.br</a></p>
-<p><span id="redirecionamento" style='border:0; color:#666; text-align: center; font-family: Arial, Helvetica, sans-serif;'></span></p>
-<script>
-var s = 5; contar();
-function contar()
-{
-   if (s == 0)
-   {
-      document.getElementById('redirecionamento').innerHTML = 'Redirecionando agora. Bom proveito!';
-      clearTimeout(contagem);
-   }
-   else if (s == 1)
-   {
-      document.getElementById('redirecionamento').innerHTML = 'Redirecionando em ' + s-- + ' segundo.';
-      contagem = setTimeout(contar, 1000);
-   }
-   else
-   {
-      document.getElementById('redirecionamento').innerHTML = 'Redirecionando em ' + s-- + ' segundos.';
-      contagem = setTimeout(contar, 1000);
-   }
-}
-</script>
+    <nav><img><H1>Kurly Klaw</H1></nav>
+    <header>
+        <h2> Redirecionando ao site madrinhas.</h2>
+    </header>
 </body>
 </html>
